fixes vertical alignment and overflow issue

--- a/application.css
+++ b/application.css
@@ -7,7 +7,7 @@ body {
   display: inline-block;
   border: 2px solid #9d9d9d;
   width: 10px;
-  height: 14px; }
+  vertical-align: middle; }
   .battery::before {
     position: absolute;
     content: '';
@@ -37,8 +37,8 @@ body {
 
 .estimate {
   display: inline-block;
-  height: 16px;
-  margin: 0 2px; }
+  margin: 0 2px;
+  vertical-align: middle; }
   .estimate .estimate-bar {
     display: block;
     width: 8px;
